--- a/index.html
+++ b/index.html
@@ -4,24 +4,139 @@
     <meta charset="UTF-8">
     <title>Web Development Services</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="font awesome link here">
+    <link rel="stylesheet" href="font">
 </head>
-<h1>Websites for everyone to enjoy</h1>
-<div class = "top_box">
-    <ul class = "description_box">
-        <li>fast
-            <li>reliable
-                <li>beautiful
+<div class = "wrapper">
 
-                </li>
-            </li>
+
+    <!-- navigation bar -->
+<nav class = "main-navbar">
+    <ul>
+        <li>
+            <a>HOME</a>
+        </li>
+        <li>
+            <a>ABOUT</a>
+        </li>
+        <li>
+            <a>SERVICES</a>
+        </li>
+        <li>
+            <a>PORTFOLIO</a>
+        </li>
+        <li>
+            <a>CONTACT</a>
         </li>
     </ul>
+</nav>
+<!-- TOP CONTAINER -->
+
+<section class = "top-container">
+    <header class = "showcase">
+        <h1>Your Brand Never Looked So Good</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex maiores tenetur possimus fugiat rerum doloribus?</p>
+        <a href="#" class = "btn">READ MORE</a>
+    </header>
+</section>
+
+    <!-- boxes section -->
+<section class = "boxes">
+    <div class = "box">
+        <i class = "pie chart icon"></i>
+        <h3>Analytics</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non asperiores beatae quos, eius, delectus sed debitis, aspernatur magnam qui id reprehenderit. Officia itaque porro molestias?</p>
+    </div>
+</section>
+<!-- TOP CONTAINER -->
+
+<section class = "top-container">
+    <header class = "showcase">
+        <h1>Your Brand Never Looked So Good</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex maiores tenetur possimus fugiat rerum doloribus?</p>
+        <a href="#" class = "btn">READ MORE</a>
+    </header>
+</section>
+
+    <!-- boxes section -->
+<section class = "boxes">
+    <div class = "box">
+        <i class = "pie chart icon"></i>
+        <h3>Analytics</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non asperiores beatae quos, eius, delectus sed debitis, aspernatur magnam qui id reprehenderit. Officia itaque porro molestias?</p>
+    </div>
+</section>
+<!-- TOP CONTAINER -->
+
+<section class = "top-container">
+    <header class = "showcase">
+        <h1>Your Brand Never Looked So Good</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex maiores tenetur possimus fugiat rerum doloribus?</p>
+        <a href="#" class = "btn">READ MORE</a>
+    </header>
+</section>
+
+    <!-- boxes section -->
+<section class = "boxes">
+    <div class = "box">
+        <i class = "pie chart icon"></i>
+        <h3>Analytics</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non asperiores beatae quos, eius, delectus sed debitis, aspernatur magnam qui id reprehenderit. Officia itaque porro molestias?</p>
+    </div>
+</section>
+
+<!-- top container -->
+
+<section class = "top-container">
+    <header class = "showcase">
+        <h1>Your Brand Never Looked So Good</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex maiores tenetur possimus fugiat rerum doloribus?</p>
+        <a href="#" class = "btn">READ MORE</a>
+    </header>
+</section>
+
+<!-- boxes section -->
+<div class = "box">
+    <i class = "computer icon"></i>
+    <h3>Development</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non asperiores beatae quos, eius, delectus sed debitis, aspernatur magnam qui id reprehenderit. Officia itaque porro molestias?</p>
+</div>
+<div class = "box">
+    <i class = "phone icon"></i>
+    <h3>Support</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non asperiores beatae quos, eius, delectus sed debitis, aspernatur magnam qui id reprehenderit. Officia itaque porro molestias?</p>
 </div>
 
-<body>
-    
+<!-- info section -->
+<section class = "info">
+    <img src="" alt="">
+    <div>
+        <h2>Your business on the web</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, odit laborum! Doloremque reiciendis quod commodi, mollitia ab facilis laudantium nemo architecto, nostrum, iusto libero sequi temporibus ad. Beatae, deleniti impedit?</p>
+<a href="" class = "btn">Learn more</a>
+    </div>
+</section>
 
+<!-- portfolio section -->
+<section>
+    <img src="" alt="">
+    <img src="" alt="">
+    <img src="" alt="">
+    <img src="" alt="">
+    <img src="" alt="">
+    <img src="" alt="">
+    <img src="" alt="">
+    <img src="" alt="">
+    <img src="" alt="">
+</section>
 
+<!-- footer -->
+<footer>
+    <p>PhotoBiz &copy;2022</p>
+</footer>
 
-</body>
+<!-- wrapper ends -->
+
+        </div>
+    </body>
 </html>
